--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="styles.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,8 +13,8 @@
         <p>This is a simple webpage for Lab 1 of INFO2180.</p>
     </header>
     <main>
-        <h2>[Your Name]</h2>
-        <p>[Paragraph about myself]</p>
+        <h2>Jahleel Troupe</h2>
+        <p> I am interested in web development because it combines creativity and technical skills, allowing me to build engaging and interactive websites that can reach a global audience. The ever-evolving nature of web technologies excites me, as there are always new tools and frameworks to explore, which keeps the learning process dynamic and stimulating. I enjoy the challenge of solving complex problems, whether it's optimizing user experience, improving site performance, or ensuring compatibility across different devices and browsers. Additionally, web development offers the opportunity to work on projects that can make a tangible impact, whether it's creating a personal blog, developing an e-commerce platform, or contributing to a community-focused initiative. The ability to transform ideas into functional digital products fuels my passion for this field, and I look forward to continually enhancing my skills and contributing to innovative web solutions.</p>
     </main>
     <footer>
         <p>Copyright &copy; 2020 <Your Name>.</p>
